Implemented env variable and api fetching

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "React-Native-App",
+    "name": "Movie-Flix",
     "slug": "React-Native-App",
     "version": "1.0.0",
     "orientation": "portrait",
