--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.3",
     "expo": "~52.0.38",
+    "expo-auth-session": "^6.0.3",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
+    "expo-dotenv": "^0.1.0",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image": "^2.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.18",
     "expo-splash-screen": "~0.29.22",
