--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.3",
-    "expo": "53.0.22",
+    "expo": "^54.0.0",
     "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -47,15 +47,14 @@
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-  "@babel/core": "^7.25.2",
-  "@types/jest": "^29.5.12",
-  "@types/react": "~19.0.10",
-  "@types/react-test-renderer": "^19.0.0",
-  "jest": "^29.2.1",
-  "jest-expo": "~53.0.10",
-  "react-test-renderer": "19.0.0",
-  "typescript": "~5.8.3"
-}
-  ,
+    "@babel/core": "^7.25.2",
+    "@types/jest": "^29.5.12",
+    "@types/react": "~19.0.10",
+    "@types/react-test-renderer": "^19.0.0",
+    "jest": "^29.2.1",
+    "jest-expo": "~53.0.10",
+    "react-test-renderer": "19.0.0",
+    "typescript": "~5.8.3"
+  },
   "private": true
 }
